doc: se documentó ejercicio 3, makefile y cambios en build.sbt feat: se modificó makefile para aceptar testing